# c2c-crew

./: .gitignore  README.md  pyproject.toml  report.md
src/c2c_crew/: chatCrew.py  crew.py  main.py  serviceCrew.py
src/c2c_crew/config/: agents.yaml  tasks.yaml
