[project]
name = "c2c_crew"
version = "0.1.0"
description = "c2c-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
c2c_crew = "c2c_crew.main:run"
run_crew = "c2c_crew.main:run"
train = "c2c_crew.main:train"
replay = "c2c_crew.main:replay"
test = "c2c_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
